# act-backend

./: .gitignore  README.md  generator.py  ir_egraph_rs_generator.py  pyproject.toml
.github/workflows/: test.yml
act_backend/: __init__.py  isel_ir2isa_rewrites_rs_generator.py
act_backend/generic/: build.rs
act_backend/templates/: ir2isa_rewrites.rs.IR2ISA_REWRITE_FUNCTIONS.shape_setting.txt
docker/: act.env  chown.sh  cleanup.sh  exec.sh  run.sh
examples/QKV/: QKV.py
generic/cpp/malloc/src/: emitter.cc
src/act_backend/: generator.py  isel_ir2isa_rewrites_rs_generator.py  isel_ir2isa_rewrites_txt_generator.py
src/act_backend/generic/src/ir/: egraph.rs
templates/: ir2isa_rewrites.rs.IR2ISA_REWRITE_FUNCTIONS.metadata_with_attr.txt
tests/: conftest.py  pytest.sh  test_qkv.py  test_qkv_new.py
